ok this is my final change for the front page top half for right now, I fixed the button problem but I still don't like the contrast between the background and text. We can look into it

--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -26,7 +26,7 @@
     }
 
     .index-header-section-button {
-      background-color: #2a6496;
+      background-color: #F4755F;
       border: none;
       color: white;
       padding: 15px 50px;
@@ -38,6 +38,11 @@
       font-weight: bold;
       margin-right: 5px;
       margin-left: 5px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #FF5132;
+      }
   }
   }
 }
@@ -107,7 +112,7 @@
 }
 
 .index-content-a {
-  background: url('https://codemihs.files.wordpress.com/2017/01/img_24675.jpg?') no-repeat center center;
+  background: url('/assets/contest_images/index_photo.jpg') no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
